# binman

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/binman/: config.py  executor.py  main.py  models.py
