[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "binmanx"
version = "1.0"
description = "A simple binary version manager wrapper"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
binman = "binman.main:main"

[tool.setuptools.packages.find]
where = ["src"]